add: alias for img path

--- a/personalPortfolio/src/static-components/main.html
+++ b/personalPortfolio/src/static-components/main.html
@@ -1,83 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <meta name="author" content="Ítalo Polazzi">
-    <meta name="description" content="A Web Developer personal portfolio">
-    <title>Ítalo Polazzi - Web Developer</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js.map"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.2.4/custom-elements.min.js"></script>
-</head>
-
-<body class="main color-inverted">
-    <ul class="sr-only">
-        <li><a tabindex="0" href="#navbar">Skip to Navigation</a></li>
-        <li><a tabindex="0" href="#welcome-section">Skip to Main Content</a></li>
-    </ul>
-    <nav id="navbar" class="primary color-inverted pa8" role="navigation">
-        <header>
-            <custom-svg svg="logo" class="color-inverted"></custom-svg>
-        </header>
-        <div id="nav-menu">
-            <ul id="nav-internal">
-                <li><a tabindex="0" href="#welcome-section" class="primary color-inverted"
-                        title="welcome"><span>welcome</span></a></li>
-                <li><a tabindex="0" href="#projects" class="primary color-inverted"
-                        title="projects"><span>projects</span></a></li>
-                <li><a tabindex="0" href="#contact" class="primary color-inverted"
-                        title="contact"><span>contact</span></a></li>
-            </ul>
-            <ul id="nav-social">
-
-                <li><a tabindex="0" href="https://www.github.com/itpzzi" class="primary color-inverted"
-                        title="GitHub profile" target="_blank" id="profile-github">
-                        <div class="icon"><i class="mdi mdi-github-face"></i></div><span>GitHub</span>
-                    </a>
-                </li>
-
-                <li><a tabindex="0" href="https://twitter.com/italopolazzi" class="primary color-inverted"
-                        title="Twitter profile" target="_blank" id="profile-twitter">
-                        <div class="icon"><i class="mdi mdi-twitter"></i></div><span>Twitter</span>
-                    </a></li>
-
-                <li><a tabindex="0" href="https://www.freecodecamp.org/italopolazzi" class="primary color-inverted"
-                        title="FreeCodeCamp portfolio" target="_blank" id="profile-link">
-                        <div class="icon"><i class="mdi mdi-alpha-f-circle"></i></div><span>FreeCodeCamp</span>
-                    </a>
-                </li>
-
-                <li><a tabindex="0" href="https://www.behance.net/itpzzi3100" class="primary color-inverted"
-                        title="Behance portfolio" target="_blank" id="profile-link">
-                        <div class="icon"><i class="mdi mdi-behance"></i></div><span>Behance</span>
-                    </a>
-                </li>
-
-            </ul>
-
-            <div id="nav-dark-mode">
-                <div class="custom_checkbox main color-inverted">
-                    <label for="dark-mode" class="custom-chebox">
-                        <i class="mdi mdi-theme-light-dark"></i><span>Dark Mode</span>
-                    </label>
-                    <input title="Dark mode" type="checkbox" name="dark-mode" id="dark-mode" title="Switch Dark Mode">
-                    <div class="switch">
-                        <div class="pin"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="nav-menu-opener" class="inverted color-main" role="button" title="menu">
-                <i class="mdi mdi-menu"></i><span>Menu</span>
-            </div>
-        </div>
-    </nav>
-
     <main id="main-doc" class="pa0" role="main">
 
         <section class="main-section pa color-primary" id="welcome-section">
@@ -128,9 +48,9 @@
                     <div class="tile secondary color-secondary" data-object="1">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
+                            <a href="../img/projects/office_v3.png">
                                 <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
+                                    <img src="../img/projects/office_v3.png"></img>
                                 </figure>
                             </a>
                         </header>
@@ -154,9 +74,9 @@
                     <div class="tile color-secondary secondary" data-object="2">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
+                            <a href="../img/projects/office_v3.png">
                                 <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
+                                    <img src="../img/projects/office_v3.png"></img>
                                 </figure>
                             </a>
                         </header>
@@ -180,9 +100,9 @@
                     <div class="tile color-secondary secondary" data-object="3">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
+                            <a href="../img/projects/office_v3.png">
                                 <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
+                                    <img src="../img/projects/office_v3.png"></img>
                                 </figure>
                             </a>
                         </header>
@@ -214,9 +134,9 @@
                         <header>
                             <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
                                 architecto asperiores</h4>
-                            <a href="./img/projects/office_v2.png">
+                            <a href="../img/projects/office_v2.png">
                                 <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v2.png"></img>
+                                    <img src="../img/projects/office_v2.png"></img>
                                     <!-- <figcaption>Legenda para a imagem</figcaption> -->
                                 </figure>
                             </a>
@@ -243,9 +163,9 @@
                     <div class="tile color-secondary secondary" data-object="5">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
+                            <a href="../img/projects/office_v3.png">
                                 <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
+                                    <img src="../img/projects/office_v3.png"></img>
                                 </figure>
                             </a>
                         </header>
@@ -269,9 +189,9 @@
                     <div class="tile color-secondary secondary" data-object="6">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="./img/projects/office_v3.png">
+                            <a href="../img/projects/office_v3.png">
                                 <figure class="tile-screenshot">
-                                    <img src="./img/projects/office_v3.png"></img>
+                                    <img src="../img/projects/office_v3.png"></img>
                                 </figure>
                             </a>
                         </header>
@@ -340,38 +260,3 @@
         </section>
 
     </main>
-
-
-    <footer id="footer" class="accent container">
-        <div class="row">
-            <div class="xs-text-align-center col-xs12 col-sm12 col-md2 pa8">
-                <custom-svg svg="logo"></custom-svg>
-                <br>
-                <span class="logo">Polazzi</span>
-            </div>
-            <div class="xs-text-align-justify col-xs12 col-sm6 col-md5 pa8">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi saepe esse temporibus, a, impedit ex
-                    nulla soluta similique quo praesentium doloribus illum voluptatibus quisquam provident sunt ratione
-                    amet aut velit.</p>
-            </div>
-            <div class="xs-text-align-justify col-xs12 col-sm6 col-md5 pa8">
-                <!-- <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
-                    data-type="horizontal" data-theme="dark" data-vanity="itpzzi"><a class="LI-simple-link"
-                        href='https://br.linkedin.com/in/itpzzi?trk=profile-badge'>Ítalo Polazzi Ferreira</a></div>
-                        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
-                            data-type="vertical" data-theme="dark" data-vanity="itpzzi"><a class="LI-simple-link"
-                                href='https://br.linkedin.com/in/itpzzi?trk=profile-badge'>Ítalo Polazzi Ferreira</a>
-                        </div> -->
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs12 xs-text-align-center pa8">&copy; Ítalo Polazzi - 2019</div>
-        </div>
-    </footer>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-    <script src="js/index.js" type="module"></script>
-    
-    <!-- <script src="https://cdn.freecodecamp.org/<i class="mdi mdi-read">able-projects-fcc/v1/bundle.js"></script> --></i>
-</body>
-
-</html>
