add: interpolate require to images

--- a/personalPortfolio/src/static-components/main.html
+++ b/personalPortfolio/src/static-components/main.html
@@ -48,9 +48,9 @@
                     <div class="tile secondary color-secondary" data-object="1">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="~@img/projects/office_v3.png">
+                            <a href="${require('@img/projects/office_v3.png')}">
                                 <figure class="tile-screenshot">
-                                    <img src="~@img/projects/office_v3.png"></img>
+                                    <img src="${require('@img/projects/office_v3.png')}"></img>
                                 </figure>
                             </a>
                         </header>
@@ -74,9 +74,9 @@
                     <div class="tile color-secondary secondary" data-object="2">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="~@img/projects/office_v3.png">
+                            <a href="${require('@img/projects/office_v3.png')}">
                                 <figure class="tile-screenshot">
-                                    <img src="~@img/projects/office_v3.png"></img>
+                                    <img src="${require('@img/projects/office_v3.png')}"></img>
                                 </figure>
                             </a>
                         </header>
@@ -100,9 +100,9 @@
                     <div class="tile color-secondary secondary" data-object="3">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="~@img/projects/office_v3.png">
+                            <a href="${require('@img/projects/office_v3.png')}">
                                 <figure class="tile-screenshot">
-                                    <img src="~@img/projects/office_v3.png"></img>
+                                    <img src="${require('@img/projects/office_v3.png')}"></img>
                                 </figure>
                             </a>
                         </header>
@@ -134,9 +134,9 @@
                         <header>
                             <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
                                 architecto asperiores</h4>
-                            <a href="~@img/projects/office_v2.png">
+                            <a href="${require('@img/projects/office_v2.png')}">
                                 <figure class="tile-screenshot">
-                                    <img src="~@img/projects/office_v2.png"></img>
+                                    <img src="${require('@img/projects/office_v2.png')}"></img>
                                     <!-- <figcaption>Legenda para a imagem</figcaption> -->
                                 </figure>
                             </a>
@@ -163,9 +163,9 @@
                     <div class="tile color-secondary secondary" data-object="5">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="~@img/projects/office_v3.png">
+                            <a href="${require('@img/projects/office_v3.png')}">
                                 <figure class="tile-screenshot">
-                                    <img src="~@img/projects/office_v3.png"></img>
+                                    <img src="${require('@img/projects/office_v3.png')}"></img>
                                 </figure>
                             </a>
                         </header>
@@ -189,9 +189,9 @@
                     <div class="tile color-secondary secondary" data-object="6">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="~@img/projects/office_v3.png">
+                            <a href="${require('@img/projects/office_v3.png')}">
                                 <figure class="tile-screenshot">
-                                    <img src="~@img/projects/office_v3.png"></img>
+                                    <img src="${require('@img/projects/office_v3.png')}"></img>
                                 </figure>
                             </a>
                         </header>
