add: fake images for tiles

--- a/personalPortfolio/src/static-components/footer.html
+++ b/personalPortfolio/src/static-components/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer" class="accent container">
     <div class="row">
-        <div class="xs-text-align-center col-xs12 col-sm12 col-md2 pa8">
+        <div class="xs-text-align-center xs-align-items-center col-xs12 col-sm12 col-md2 pa8">
             <custom-svg svg="logo"></custom-svg>
             <br>
             <span class="logo">Polazzi</span>
