--- a/personalPortfolio/src/static-components/main.html
+++ b/personalPortfolio/src/static-components/main.html
@@ -48,9 +48,9 @@
                     <div class="tile secondary color-secondary" data-object="1">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="${require('@img/projects/office_v3.png')}">
+                            <a href="https://picsum.photos/id/180/367/267">
                                 <figure class="tile-screenshot">
-                                    <img src="${require('@img/projects/office_v3.png')}"></img>
+                                    <img src="https://picsum.photos/id/180/367/267"></img>
                                 </figure>
                             </a>
                         </header>
@@ -65,7 +65,7 @@
                             <div class="tile-actions">
                                 <a role="button" tabindex="0" href="#" data-activator="1"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                <a tabindex="0" role="button" href="https://picsum.photos/id/180/367/267"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
                             </div>
                         </footer>
@@ -74,9 +74,9 @@
                     <div class="tile color-secondary secondary" data-object="2">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="${require('@img/projects/office_v3.png')}">
+                            <a href="https://picsum.photos/id/20/367/267">
                                 <figure class="tile-screenshot">
-                                    <img src="${require('@img/projects/office_v3.png')}"></img>
+                                    <img src="https://picsum.photos/id/20/367/267"></img>
                                 </figure>
                             </a>
                         </header>
@@ -91,7 +91,7 @@
                             <div class="tile-actions">
                                 <a role="button" tabindex="0" href="#" data-activator="2"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                <a tabindex="0" role="button" href="https://picsum.photos/id/20/367/267"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
                             </div>
                         </footer>
@@ -100,9 +100,9 @@
                     <div class="tile color-secondary secondary" data-object="3">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="${require('@img/projects/office_v3.png')}">
+                            <a href="https://picsum.photos/id/0/367/267">
                                 <figure class="tile-screenshot">
-                                    <img src="${require('@img/projects/office_v3.png')}"></img>
+                                    <img src="https://picsum.photos/id/0/367/267"></img>
                                 </figure>
                             </a>
                         </header>
@@ -117,7 +117,7 @@
                             <div class="tile-actions">
                                 <a role="button" tabindex="0" href="#" data-activator="3"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                <a tabindex="0" role="button" href="https://picsum.photos/id/0/367/267"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
                             </div>
                         </footer>
@@ -134,9 +134,9 @@
                         <header>
                             <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
                                 architecto asperiores</h4>
-                            <a href="${require('@img/projects/office_v2.png')}">
+                            <a href="https://picsum.photos/id/26/367/267">
                                 <figure class="tile-screenshot">
-                                    <img src="${require('@img/projects/office_v2.png')}"></img>
+                                    <img src="https://picsum.photos/id/26/367/267"></img>
                                     <!-- <figcaption>Legenda para a imagem</figcaption> -->
                                 </figure>
                             </a>
@@ -154,7 +154,7 @@
                             <div class="tile-actions">
                                 <a role="button" tabindex="0" href="#" data-activator="4"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                <a tabindex="0" role="button" href="https://picsum.photos/id/26/367/267"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
                             </div>
                         </footer>
@@ -163,9 +163,9 @@
                     <div class="tile color-secondary secondary" data-object="5">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="${require('@img/projects/office_v3.png')}">
+                            <a href="https://picsum.photos/id/1029/367/267">
                                 <figure class="tile-screenshot">
-                                    <img src="${require('@img/projects/office_v3.png')}"></img>
+                                    <img src="https://picsum.photos/id/1029/367/267"></img>
                                 </figure>
                             </a>
                         </header>
@@ -180,7 +180,7 @@
                             <div class="tile-actions">
                                 <a role="button" tabindex="0" href="#" data-activator="5"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                <a tabindex="0" role="button" href="https://picsum.photos/id/1029/367/267"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
                             </div>
                         </footer>
@@ -189,9 +189,9 @@
                     <div class="tile color-secondary secondary" data-object="6">
                         <header>
                             <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="${require('@img/projects/office_v3.png')}">
+                            <a href="https://picsum.photos/id/119/367/267">
                                 <figure class="tile-screenshot">
-                                    <img src="${require('@img/projects/office_v3.png')}"></img>
+                                    <img src="https://picsum.photos/id/119/367/267"></img>
                                 </figure>
                             </a>
                         </header>
@@ -206,7 +206,7 @@
                             <div class="tile-actions">
                                 <a role="button" tabindex="0" href="#" data-activator="6"
                                     class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="img/projects/gab.png"
+                                <a tabindex="0" role="button" href="https://picsum.photos/id/119/367/267"
                                     class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
                             </div>
                         </footer>
