--- a/personalPortfolio/src/static-components/main.html
+++ b/personalPortfolio/src/static-components/main.html
@@ -1,262 +1,7 @@
     <main id="main-doc" class="pa0" role="main">
 
-        <section class="main-section pa color-primary" id="welcome-section">
-            <div class="svg-background"><svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 1080"
-                    style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
-                    <style type="text/css">
-                        .st0 {
-                            fill: #FF8365;
-                        }
-                    </style>
-                    <g>
-                        <path class="st0" d="M-113,1080C-367.4,807.1-380,250.9-113,0c99.3-93.3,232-139.5,828-123c341.4,9.5,756.8,37.3,1229,105
-		c11.5,44.7,19.1,106.5-11,159c-120.9,210.6-647.5-81.1-949,152c-240.8,186.2-66.5,495.9-387,787c-58.4,53.1-208.6,185.6-402,168
-		C29.6,1233-79.3,1116.2-113,1080z"></path>
-                    </g>
-                </svg></div>
-            <div class="row color-inverted">
-                <div class="col-xs12 col-sm8 col-md5 pa8 main">
-                    <header>
-                        <h1>Ítalo Polazzi a Web Develover</h1>
-                        <h2>Welcome</h2>
-                    </header>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa
-                        possimus ea
-                        hic
-                        ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque
-                        amet.
-                    </p>
-
-                </div>
-
-            </div>
-
-
-        </section>
-
-        <section class="main-section pa" id="projects">
-            <header>
-                <h2>Projects</h2>
-                <hr>
-            </header>
-
-            <section class="my8 project-types" id="project-web">
-                <h3>Web Developer</h3>
-                <section class="my4 project-gallery">
-
-                    <div class="tile secondary color-secondary" data-object="1">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="https://picsum.photos/id/180/367/267">
-                                <figure class="tile-screenshot">
-                                    <img src="https://picsum.photos/id/180/367/267"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="1"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="https://picsum.photos/id/180/367/267"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="2">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="https://picsum.photos/id/20/367/267">
-                                <figure class="tile-screenshot">
-                                    <img src="https://picsum.photos/id/20/367/267"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="2"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="https://picsum.photos/id/20/367/267"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="3">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="https://picsum.photos/id/0/367/267">
-                                <figure class="tile-screenshot">
-                                    <img src="https://picsum.photos/id/0/367/267"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="3"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="https://picsum.photos/id/0/367/267"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                </section>
-            </section>
-
-            <section class="my8 project-types" id="project-design">
-                <h3>Graphic Designer</h3>
-                <section class="my4 project-gallery">
-
-                    <div class="tile secondary color-secondary" data-object="4">
-                        <header>
-                            <h4 class="tile-title color-inverted">Nihil optio, ut perspiciatis debitis
-                                architecto asperiores</h4>
-                            <a href="https://picsum.photos/id/26/367/267">
-                                <figure class="tile-screenshot">
-                                    <img src="https://picsum.photos/id/26/367/267"></img>
-                                    <!-- <figcaption>Legenda para a imagem</figcaption> -->
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut facilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut facilis quisquam.</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="4"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="https://picsum.photos/id/26/367/267"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="5">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="https://picsum.photos/id/1029/367/267">
-                                <figure class="tile-screenshot">
-                                    <img src="https://picsum.photos/id/1029/367/267"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="5"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="https://picsum.photos/id/1029/367/267"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                    <div class="tile color-secondary secondary" data-object="6">
-                        <header>
-                            <h4 class="tile-title color-inverted">Technical Documentation</h4>
-                            <a href="https://picsum.photos/id/119/367/267">
-                                <figure class="tile-screenshot">
-                                    <img src="https://picsum.photos/id/119/367/267"></img>
-                                </figure>
-                            </a>
-                        </header>
-                        <p class="tile-description color-inverted">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Placeat
-                            aut fa+cilis quisquam. Nihil optio, ut perspiciatis debitis
-                            architecto asperiores
-                            provident mollitia ratione magnam, ex nostrum incidunt eius
-                            assumenda, placeat
-                            doloribus?</p>
-                        <footer class="color-inverted">
-                            <div class="tile-actions">
-                                <a role="button" tabindex="0" href="#" data-activator="6"
-                                    class="tile-action tile-action-expand main color-inverted mdi mdi-chevron-up"></a>
-                                <a tabindex="0" role="button" href="https://picsum.photos/id/119/367/267"
-                                    class="tile-action tile-action-open main color-inverted mdi mdi-plus"></a>
-                            </div>
-                        </footer>
-                    </div>
-
-                </section>
-            </section>
-
-        </section>
-
-        <section class="main-section pa" id="contact">
-            <header>
-                <h2>Contact</h2>
-                <hr>
-            </header>
-
-            <section class="row">
-
-                <div id="contact-art" class="stretch lt-md-none col-md6 accent">
-                    <!-- <div></div> -->
-                </div>
-
-                <div class="col-xs12 col-md6">
-
-                    <form class="color-inverted main pa8" id="contact" name="contact" action="">
-
-                        <fieldset class="main pa8 mb8">
-                            <legend class="mb16"> Contact form</legend>
-
-                            <div class="input mb8">
-                                <label for="subject">Subject</label>
-                                <input class="main color-inverted" type="text" id="subject" name="subject"
-                                    maxlength="65" required aria-required="true">
-                            </div>
-                            <div class="input mb8">
-                                <label for="email">E-mail</label>
-                                <input class="main color-inverted" type="email" id="email" name="email" maxlength="65"
-                                    required aria-required="true">
-                            </div>
-                            <div class="input mb8">
-                                <label for="content">Content</label>
-                                <textarea class="main color-inverted" role="text" id="content" name="content"
-                                    maxlength="500" required aria-required="true"></textarea>
-                            </div>
-                        </fieldset>
-
-
-                    </form>
-                </div>
-            </section>
-        </section>
+        ${require('./main/welcome.html')}
+        ${require('./main/projects.html')}
+        ${require('./main/contact.html')}
 
     </main>
