add: super radius and buttons

--- a/personalPortfolio/src/static-components/main/contact.html
+++ b/personalPortfolio/src/static-components/main/contact.html
@@ -32,6 +32,10 @@
                                 <textarea class="main color-inverted" role="text" id="content" name="content"
                                     maxlength="500" required aria-required="true"></textarea>
                             </div>
+                            <div class="input input-submit mb8">
+                                <input class="main color-inverted" type="submit" id="submit" name="submit"
+                                    value="Submit">
+                            </div>
                         </fieldset>
 
 
