--- a/personalPortfolio/src/static-components/main/welcome.html
+++ b/personalPortfolio/src/static-components/main/welcome.html
@@ -16,16 +16,16 @@
     <div class="row color-inverted">
         <div class="col-xs12 col-sm8 col-md5 pa8 main">
             <header>
-                <h1>Ítalo Polazzi a Web Develover</h1>
-                <h2>Welcome</h2>
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit?</h1>
             </header>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti voluptatem culpa
-                possimus ea
-                hic
-                ratione, quaerat optio ab dolore ipsam iste sit fugit fuga ullam nulla facere quis atque
-                amet.
-            </p>
-
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, reprehenderit aperiam qui error labore
+                ratione cum. Aliquid, repellat perferendis. Quae nostrum cumque earum facere exercitationem incidunt
+                unde excepturi iusto placeat.</p>
+            <div class="row">
+                <div class="col-xs12 xs-justify-content-right">
+                    <a tabindex="0" role="button" href="#projects" class="button main color-inverted">See the projects</a>
+                </div>
+            </div>
         </div>
 
     </div>
